Main code compiles